Get and show EXIF Data for images

--- a/app/imports/ui/photoList/photoList.html
+++ b/app/imports/ui/photoList/photoList.html
@@ -36,6 +36,7 @@
         {{/unless}}
 
         <div class="caption-container">
+          {{> photoInfo getSelectedPhoto}}
           <p class="caption"></p>
         </div>
       </div>
