--- a/app/imports/ui/photoList/photoListItem.html
+++ b/app/imports/ui/photoList/photoListItem.html
@@ -1,16 +1,5 @@
 <template name="photoListItem">
-  <div class="col-md-4 photoTile">
-    {{#if isVideo}}
-    <div class="galleryItem hover-shadow">
-      <video class="galleryVideo">
-        <source src="{{ thumbUrl }}" type="video/mp4" preload="none">
-        </video>
-        <div class="playpause"></div>
-      </div>
-      {{else}}
-      <div class="galleryItem thumbnail hover-shadow">
-        <img class="photoListImage img-responsive" src="{{ thumbUrl }}" alt="{{key}}">
-      </div>
-      {{/if}}
-    </div>
-  </template>
+  <a href="{{imageUrl}}" title="{{photo.metadata.Keywords}}">
+    <img src="{{thumbUrl}}" alt="{{photo.metadata.Keywords}}" />
+  </a>
+</template>
