Update for new metadata structure

--- a/app/imports/ui/photoList/photoInfo.html
+++ b/app/imports/ui/photoList/photoInfo.html
@@ -5,6 +5,9 @@
       Keywords: {{metadata.Keywords}}
     </div>
     <div class="row">
+      Location: {{metadata.Location}}, {{metadata.City}}, {{metadata.Country}}
+    </div>
+    <div class="row">
       Date: {{metadata.DigitalCreationDate}}
     </div>
     <div class="row">
