--- a/app/imports/ui/photoList/photoListItem.html
+++ b/app/imports/ui/photoList/photoListItem.html
@@ -1,5 +1,5 @@
 <template name="photoListItem">
-  <a href="{{imageUrl}}" title="{{photo.metadata.Keywords}}">
-    <img src="{{thumbUrl}}" alt="{{photo.metadata.Keywords}}" />
+  <a href="{{imageUrl}}" title="{{photo.metadata.Label}}">
+    <img src="{{thumbUrl}}" alt="{{photo.metadata.Label}}" />
   </a>
 </template>
