--- a/app/imports/ui/header/header.html
+++ b/app/imports/ui/header/header.html
@@ -9,9 +9,7 @@
         <a class="nav-item nav-link {{#if isHome}} active{{/if}}" href="/">Home{{#if isHome}} <span class="sr-only">(current)</span>{{/if}}</a>
         <a class="nav-item nav-link {{#if isAbout}} active{{/if}}" href="/about">About{{#if isAbout}} <span class="sr-only">(current)</span>{{/if}}</a>
         {{#if currentUser}}
-        <a class="nav-item nav-link aws-update" href="#">Update From AWS</a>
-        <a class="nav-item nav-link" href="/changePassword">Change Password</a>
-        <a class="nav-item nav-link logout" href="#">Logout</a>
+        <a class="nav-item nav-link" href="/admin">Admin</a>
         {{ else }}
         {{#if isAdmin}}
         <form class="form-inline loginForm">
