--- a/app/imports/ui/albumList/albumListItem.html
+++ b/app/imports/ui/albumList/albumListItem.html
@@ -1,12 +1,5 @@
 <template name="albumListItem">
-  <div class="col-md-4 albumTile">
-    <a href="/albums/{{_id}}">
-      <div class="thumbnail">
-        <img class="img-responsive" src="{{ featuredImageUrl }}" alt="{{name}}" style="width:100%">
-        <div class="caption">
-          <p class="albumListName">{{name}}</p>
-        </div>
-      </div>
-    </a>
-  </div>
+  <a href="/albums/{{album._id}}">
+    <img src="{{ featuredImageUrl }}" alt="{{album.name}}">
+  </a>
 </template>
